# ttalps_cms

./: .gitignore  CMakeLists.txt  README.md  create.py  run_skimming.sh  ttalps_plotter.py  ttalps_plotter_config.py
MC_sample_production/LHEproduction/: run_production.py  run_production.sh  run_production.sub
MC_sample_production/LHEtoNanoAOD/: submit_fullsim_noCopy_ttalp.jcl  submit_fullsim_noCopy_ttalp.sh  submit_fullsim_noCopy_ttalp.sub  submit_fullsim_noCopy_ttalp_template.jcl  submit_fullsim_noCopy_ttalp_template.sub  submit_multiple_fullsim_noCopy_ttalp.sh
apps/: extensions_test.cpp  histogrammer.cpp  histogramming_test.cpp  skimmer.cpp  top_trig_efficiency.cpp
apps/configs/: trigger_efficiency_histograms.py
apps/examples/: skimmer.cpp
apps/hexaquarks/: hexaquarks_calculate_trigger_efficiencies.cpp
apps/tests/: extensions_test.cpp  histogramming_test.cpp
apps/ttalps/: histogrammer.cpp  histogrammer_ttalps.cpp  skimmer_looseSemileptonic.cpp  skimmer_signalLike.cpp  skimmer_ttbarLike.cpp  top_trig_efficiency.cpp
configs/: histogrammer_config.py  skimmer_config.py  skimmer_config_signal.py  trigger_efficiency_histograms.py
configs/examples/: skimmer_config.py  trigger_efficiency_histograms.py
configs/hexaquarks/: hexaquarks_trigger_efficiencies.py  trigger_efficiencies.py
configs/ttalps/: histogrammer_config.py  histogrammer_config_template.py  skimming_looseSemileptonic.py  (+2 more)
core/: CMakeLists.txt  core_test.cpp  event_tools.hpp  top_trig_efficiency.cpp
first_steps/: check_top_channel.cpp  event_tools.hpp  plot_trigger_efficiency.py  top_trig_efficiency.cpp
frameworks_tests/: coffea.py  cpp_loops.cpp  python_loops.py  rdataframe.cpp  rdataframe.py
signals_comparison/: compareLHEfiles.C  plotComparison.C
standalone_scripts/: plot_hexaquark_distributions.py  print_cut_flow_tables.py  ttalps_plotter.py  ttalps_plotter_config.py
templates/: Event.template.hpp  PhysicsObject.template.hpp
(+63 files in other folders)
